--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,7 @@
 }
 
 .App{
+    overflow-x: hidden;
     background-color: aqua;
     width: 100vw;
     height: 100vh;
@@ -18,27 +19,28 @@
 }
 
 .header{
-    height: 7vh;
+    height: 30px;
     grid-column: 1/4;
     background-color: rgb(56, 56, 56);
 
 }
 
 #body{
-    height: 90vh;
+    min-height: 100vh;
+    height: calc(100%-30px);
     background-color: rgb(255, 255, 255);
 
 }
 
 .aside{
-    min-width: 80px;
-    height: 90vh;
+    min-width: 92px;
+    height: calc(100%-30px);
     background-color: rgb(204, 204, 204);
 
 }
 
 .footer{
-    height: 5vh;
+    height: 0vh;
     grid-column: 1/3;
     color: azure;
     background-color: rgb(36, 36, 36);
@@ -57,10 +59,13 @@
     border: 0px;
 }
 
-.switchTable{
+.asideButton{
     border: 0px;
     margin: 6px;
-    max-height: 100px;
+    margin-bottom: 0px;
+    min-height: 20px;
+    max-height: 40px;
+    min-width: 80px;
 }
 
 .card{
@@ -115,5 +120,7 @@
     display: flex;
     justify-content: center;
 }
+
+
 
 .taskDescription:focus{border: 0px !important;border-radius: 1px !important;outline: 2px !important;}
